cabal-version:      3.16
name:               anthropic-sdk-haskell
version:            0.1.0.0
synopsis:
    Haskell SDK for the Anthropic API (learning project, unofficial)
description:
    An unofficial Haskell client for the Anthropic API, written as a learning
    project. Not affiliated with or endorsed by Anthropic. Targets feature
    parity with the official TypeScript SDK: messages, streaming (SSE),
    tool use, batches, token counting, models, and files.
license:            MIT
license-file:       LICENSE
author:             Abdul Basit Ahmad
maintainer:         ab.ahmad@icloud.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md, README.md

common warnings
    ghc-options: -Wall -Wunused-imports

common deps
    build-depends:
        base              ^>=4.22.0.0,
        aeson             >=2.1  && <2.3,
        text              >=2.0  && <2.2,
        bytestring        >=0.11 && <0.13,
        http-client       >=0.7  && <0.8,
        http-client-tls   >=0.3  && <0.4,
        http-conduit      >=2.3  && <2.4,
        conduit           >=1.3  && <1.4,
        retry             >=0.9  && <0.10,
        async             >=2.2  && <2.3,
        containers        >=0.6  && <0.9,
        transformers      >=0.6  && <0.7,
        mtl               >=2.3  && <2.4,
        http-types        >=0.12 && <0.13,
        scientific        >=0.3  && <0.4,
        time              >=1.12 && <1.15,
        unliftio-core     >=0.2  && <0.3

library
    import:           warnings, deps
    exposed-modules:
        Anthropic.Client
        Anthropic.Types
        Anthropic.Error
        Anthropic.Messages
        Anthropic.Messages.Streaming
        Anthropic.Messages.Batches
        Anthropic.Models
        Anthropic.Files
        Anthropic.TokenCounting
    other-modules:
        Anthropic.Internal.Http
        Anthropic.Internal.Sse
        Anthropic.Internal.Json
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
        DeriveGeneric
        DerivingStrategies
        GeneralizedNewtypeDeriving
        RecordWildCards

test-suite anthropic-sdk-haskell-test
    import:           warnings, deps
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:
        Test.Messages
        Test.Streaming
        Test.Types
    build-depends:
        anthropic-sdk-haskell,
        hspec             >=2.11 && <2.12,
        hspec-wai         >=0.11 && <0.12
    hs-source-dirs:   test
    default-language: Haskell2010
    default-extensions: OverloadedStrings

executable examples
    import:           warnings, deps
    main-is:          Main.hs
    build-depends:    anthropic-sdk-haskell
    hs-source-dirs:   examples
    default-language: Haskell2010
    default-extensions: OverloadedStrings
